PROJECT(TRACER C)

# Find Dependencies

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

## MPI
INCLUDE(SetupMPI)
INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_PATH})
LIST(APPEND DIO_EXTERNAL_LIBS ${MPI_C_LIBRARIES})

## GOTCHA
FIND_PACKAGE(Gotcha REQUIRED)
INCLUDE_DIRECTORIES(${GOTCHA_INCLUDE_DIRS})
LIST(APPEND TRACER_EXTERNAL_LIBS ${GOTCHA_LIBRARIES})
