PROJECT(TRACER C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Find Dependencies

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

## GOTCHA
FIND_PACKAGE(Gotcha REQUIRED)
INCLUDE_DIRECTORIES(${GOTCHA_INCLUDE_DIRS})
LIST(APPEND TRACER_EXTERNAL_LIBS ${GOTCHA_LIBRARIES})

## PACKAGES FOR MODULES

## MPI
INCLUDE(SetupMPI)
INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_PATH})
LIST(APPEND TRACER_EXTERNAL_LIBS ${MPI_C_LIBRARIES})

FIND_PACKAGE(SILO REQUIRED)
INCLUDE_DIRECTORIES(${SILO_INCLUDE_DIRS})
LIST(APPEND TRACER_EXTERNAL_LIBS ${SILO_LIBRARIES})

ADD_SUBDIRECTORY(modules)
