PROJECT(TRACER C)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Needed CMake settings
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# Top Level Options
OPTION(GT_BUILD_MPI_IF "Build MPI Init/Finalize Module" ON)
OPTION(GT_BUILD_MPI_IO "Build MPI I/O Module" ON)
OPTION(GT_BUILD_SILO "Build SILO Module" OFF)


# Find Dependencies

LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

## GOTCHA
FIND_PACKAGE(Gotcha REQUIRED)
INCLUDE_DIRECTORIES(${GOTCHA_INCLUDE_DIRS})
LIST(APPEND TRACER_EXTERNAL_LIBS ${GOTCHA_LIBRARIES})

## PACKAGES FOR MODULES

## MPI
INCLUDE(SetupMPI)
INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_PATH})
LIST(APPEND TRACER_EXTERNAL_LIBS ${MPI_C_LIBRARIES})

## SILO
IF(GT_BUILD_SILO)
  FIND_PACKAGE(SILO REQUIRED)
  INCLUDE_DIRECTORIES(${SILO_INCLUDE_DIRS})
  LIST(APPEND TRACER_EXTERNAL_LIBS ${SILO_LIBRARIES})
ENDIF(GT_BUILD_SILO)

ADD_SUBDIRECTORY(modules)
LIST(APPEND TRACER_EXTERNAL_LIBS ${MODULE_LIBS})

## INSTALL the Linux way
INCLUDE(GNUInstallDirs)

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
